initial commit java 18 and spring boot--> not working